# iotProject

./: ._WiniotProject.code-workspace-RyzenFisso.code-workspace  LICENSE.md  README.md  WiniotProject.code-workspace-RyzenFisso.code-workspace
docs/: ._tesi.tex  04 - Project evaluation criteria - IoT 2024.docx  DEMO.md  IoT Presentazione.pptx  LINEARIZZAZIONE_SONDE.md  LaTexInstallation.md  MAIL_TODO_TESI.md  MULTIPLEX.md  README.md  RESEARCH.md  USI_Robotics_report.fdb_latexmk  USI_Robotics_report.tex  dubt_tesi.md  note_incontro1_08_2025.txt  pdflatex218203.fls  tesi.aux  tesi.fdb_latexmk  tesi.fls  tesi.out  tesi.tex  tesi.toc  uml.mdj
docs/.texpadtmp/: tesi.aux  tesi.toc
docs/Audio/: p2_incontro0801.m4a
docs/ResearchEthModule/: README.md
docs/codeProvided/G4/IoT_modbus_project_code/IoT_modbus_project_code/main/: CMakeLists.txt  Kconfig.projbuild  connectme.html  display.c  display.h  idf_component.yml  index.html  master.c  modbus_master_params.c  modbus_master_params.h  modbus_params_iot.c  modbus_params_iot.h  slave.c  slave.h
docs/issues/: AdattatoreConvertitoreUSBaRS485.md  Board issues  Board_issues.md  Compilation.md  MULTIPLEX.md  README.md  arduino_espaasynkwebsrv_error.md
docs/tesi/: .latexmkrc  MSE_Master Thesis_Presentation_AlessioTommasi PostIncontro.pptx  discorso.txt  noteIncontro01082025(1).docx  noteIncontro01082025.docx  noteIncontro01082025_evidenziato.docx  pdflatex72715.fls  prova.aux  prova.fdb_latexmk  prova.fls  prova.tex  tesi.aux  tesi.fdb_latexmk  tesi.fls  tesi.out  tesi.tex  tesi.toc  uml.mdj
docs/video/: puntoIniziale.mkv  (+1 more)
(+129 files in other folders)
